[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/PressStart2P.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 824.0
margin_bottom = 400.0
custom_constants/separation = 80

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "James Strachan's
Honours PRoject"
align = 1
uppercase = true

[node name="ScoreAndEnemyCount" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 824.0
margin_bottom = 387.0
custom_constants/separation = 50

[node name="IndiviualAI" type="Button" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount"]
margin_right = 824.0
margin_bottom = 38.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.333333, 0.313726, 0.313726, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "PLAY INDIVIDUAL AI"
flat = true

[node name="SquadAI" type="Button" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount"]
margin_top = 88.0
margin_right = 824.0
margin_bottom = 126.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.333333, 0.313726, 0.313726, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "PLAY SQUAD AI"
flat = true

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/ScoreAndEnemyCount"]
margin_top = 176.0
margin_right = 824.0
margin_bottom = 214.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.333333, 0.313726, 0.313726, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "QUIT"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ScoreAndEnemyCount/IndiviualAI" to="." method="_on_IndiviualAI_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScoreAndEnemyCount/SquadAI" to="." method="_on_SquadAI_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScoreAndEnemyCount/Quit" to="." method="_on_Quit_pressed"]
